--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "googleapis": "^146.0.0",
     "next": "^14.2.24",
     "next-auth": "^4.24.11",
     "react": "^18",
