--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.758.0",
+    "@aws-sdk/lib-dynamodb": "^3.758.0",
+    "aws-sdk": "^2.1692.0",
     "googleapis": "^146.0.0",
     "next": "^14.2.24",
     "next-auth": "^4.24.11",
