--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 admin.md
+/src/utils/book/photoUtils.js
 
 # service account
 /src/config/service-account.json
