--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@aws-sdk/client-dynamodb": "^3.758.0",
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-dynamodb": "^3.758.0",
-    "aws-sdk": "^2.1692.0",
+    "firebase": "^11.5.0",
+    "firebase-admin": "^13.2.0",
     "googleapis": "^146.0.0",
     "mime-types": "^2.1.35",
     "next": "^14.2.24",
