--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/lib-dynamodb": "^3.758.0",
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
+    "formidable": "^3.5.2",
     "googleapis": "^146.0.0",
     "mime-types": "^2.1.35",
     "next": "^14.2.24",
