--- a/package.json
+++ b/package.json
@@ -16,10 +16,18 @@
     "firebase-admin": "^13.2.0",
     "formidable": "^3.5.2",
     "googleapis": "^146.0.0",
+    "gray-matter": "^4.0.3",
+    "katex": "^0.16.21",
     "mime-types": "^2.1.35",
     "next": "^14.2.24",
     "next-auth": "^4.24.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-math": "^6.0.0",
+    "remark-rehype": "^11.1.2"
   }
 }
