feat: @/app/text/[boardName]/layout.js에서 config에 없는 board 요청에 대해 redirect. page.js에서 board의 name 대신 config 파일에 기재된 displayName을 표시

--- a/src/config/board-config.json
+++ b/src/config/board-config.json
@@ -1,10 +1,10 @@
 {
     "notice": {
-        "name": "공지 게시판",
+        "displayName": "공지 게시판",
         "write": "admin"
     },
     "tips": {
-        "name": "교양개발",
+        "displayName": "교양개발",
         "write": "login"
     }
 }
