feat: 각종 page.js와 route.js에 board-config.json 반영

--- a/src/config/board-config.json
+++ b/src/config/board-config.json
@@ -1,10 +1,12 @@
 {
     "notice": {
         "displayName": "공지 게시판",
-        "write": "admin"
+        "writeOnlyAdmin": true,
+        "modifyOnlyAuthor": true
     },
-    "tips": {
-        "displayName": "교양개발",
-        "write": "login"
+    "reduplicate": {
+        "displayName": "복기",
+        "writeOnlyAdmin": false,
+        "modifyOnlyAuthor": false
     }
 }
