feat: 게시판 기능 추가, 게시판 수정 기능을 명문화 한 후 수정 되었을 시 text/archived 로 수정 전 글이 가도록 수정

--- a/src/config/board-config.json
+++ b/src/config/board-config.json
@@ -8,5 +8,15 @@
         "displayName": "복기",
         "writeOnlyAdmin": false,
         "modifyOnlyAuthor": false
+    },
+    "forum": {
+        "displayName": "자유게시판",
+        "writeOnlyAdmin": false,
+        "modifyOnlyAuthor": true
+    },
+    "inform": {
+        "displayName": "정보게시판",
+        "writeOnlyAdmin": false,
+        "modifyOnlyAuthor": true
     }
 }
