--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
-    "remark-rehype": "^11.1.2"
+    "remark-rehype": "^11.1.2",
+    "sharp": "^0.34.1"
   }
 }
