--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gray-matter": "^4.0.3",
     "katex": "^0.16.21",
     "mime-types": "^2.1.35",
+    "mixpanel-browser": "^2.64.0",
     "next": "^14.2.24",
     "next-auth": "^4.24.11",
     "react": "^18",
